--- a/app/src/main/cpp/cmake/CMakeLists.txt
+++ b/app/src/main/cpp/cmake/CMakeLists.txt
@@ -28,9 +28,11 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         ../base/BaseObject.cpp
         ../base/ChildObject.cpp
+        ../base/ByteBufferTest.cpp
         ../utils/TimeUtils.cpp
         ../utils/ThreadUtils.cpp
         ../Common.cpp
+        ../base/JniTransDataTest.cpp
         ../native-lib.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -46,13 +48,20 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log)
 
+find_library( # Sets the name of the path variable.
+        log-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        log)
+
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
         native-lib
-
+        -landroid
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
