--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        // https://developer.android.com/reference/tools/gradle-api/4.1/com/android/build/api/dsl/ExternalNativeCmakeOptions
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11 -w -frtti -fexceptions"  // https://developer.android.com/ndk/guides/cpp-support?hl=zh-cn
+            }
+        }
+
         ndk {
             // 设置支持的SO库架构
             abiFilters 'armeabi-v7a'//, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
