1.Change the location of CMakeLists.txt. 2.Fixed the compilation error. 3.Added component package.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -9,23 +9,28 @@ cmake_minimum_required(VERSION 3.10.2)
 
 project("CXXLib")
 
-# PROJECT_SOURCE_DIR = /Users/zanewang/Downloads/WorkSpace/MyGithub/Android/MyCXXApplication/app/src/main/cpp/cmake
+# PROJECT_SOURCE_DIR = /Users/zanewang/Downloads/WorkSpace/MyGithub/Android/MyCXXApplication/app/src/main/cpp
 set(TAG wzgtest)
-set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/..)
+set(SOURCE_DIR ${PROJECT_SOURCE_DIR})
 
 include_directories(${SOURCE_DIR})
-include_directories(${SOURCE_DIR}/utils)
 include_directories(${SOURCE_DIR}/base)
+include_directories(${SOURCE_DIR}/base/array)
+include_directories(${SOURCE_DIR}/base/file)
+include_directories(${SOURCE_DIR}/base/memory)
 include_directories(${SOURCE_DIR}/base/object)
+include_directories(${SOURCE_DIR}/base/object/bean)
 include_directories(${SOURCE_DIR}/component)
-include_directories(${SOURCE_DIR}/component/thread)
+include_directories(${SOURCE_DIR}/utils)
 
-aux_source_directory(${SOURCE_DIR} SOURCE_FILE)
-aux_source_directory(${SOURCE_DIR}/utils SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/base/array SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/base/file SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/base/memory SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/object SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/base/object/bean SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/component SOURCE_FILE)
-aux_source_directory(${SOURCE_DIR}/component/thread SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/utils SOURCE_FILE)
 
 add_library(native-lib SHARED ${SOURCE_FILE})
 
