1、增加对 libyuv 库的测试

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -12,6 +12,7 @@ project("CXXLib")
 # PROJECT_SOURCE_DIR = /Users/zanewang/Downloads/WorkSpace/MyGithub/Android/MyCXXApplication/app/src/main/cpp
 set(TAG wzgtest)
 set(SOURCE_DIR ${PROJECT_SOURCE_DIR})
+set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/../../../thirdparty)
 
 include_directories(${SOURCE_DIR})
 include_directories(${SOURCE_DIR}/base)
@@ -23,15 +24,23 @@ include_directories(${SOURCE_DIR}/base/object/bean)
 include_directories(${SOURCE_DIR}/component)
 include_directories(${SOURCE_DIR}/utils)
 
+aux_source_directory(${SOURCE_DIR} SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/array SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/file SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/memory SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/object SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/object/bean SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/base/transfer SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/component SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/utils SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/thirdparty SOURCE_FILE)
+
+#libyuv
+include_directories(${THIRD_PARTY_DIR}/libyuv/include)
+add_library(libyuv_ttt SHARED IMPORTED)
+set_target_properties(libyuv_ttt PROPERTIES IMPORTED_LOCATION ${THIRD_PARTY_DIR}/libs/${ANDROID_ABI}/libyuv_ttt.so)
 
 add_library(native-lib SHARED ${SOURCE_FILE})
 
-target_link_libraries(native-lib log android)
+target_link_libraries(native-lib libyuv_ttt log android)
