--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,10 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        dataBinding {
+            enabled true
+        }
         // https://developer.android.com/reference/tools/gradle-api/4.1/com/android/build/api/dsl/ExternalNativeCmakeOptions
         externalNativeBuild {
             cmake {
@@ -22,7 +23,7 @@ android {
 
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'arm64-v8a'//, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi-v7a'//, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
     }
 
