--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(${SOURCE_DIR}/base/memory)
 include_directories(${SOURCE_DIR}/base/object)
 include_directories(${SOURCE_DIR}/base/object/bean)
 include_directories(${SOURCE_DIR}/component)
+include_directories(${SOURCE_DIR}/component/thread)
 include_directories(${SOURCE_DIR}/utils)
 
 aux_source_directory(${SOURCE_DIR} SOURCE_FILE)
@@ -33,6 +34,7 @@ aux_source_directory(${SOURCE_DIR}/base/object SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/object/bean SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/base/transfer SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/component SOURCE_FILE)
+aux_source_directory(${SOURCE_DIR}/component/thread SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/utils SOURCE_FILE)
 aux_source_directory(${SOURCE_DIR}/thirdparty SOURCE_FILE)
 
