--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -13,6 +13,7 @@ project("CXXLib")
 set(TAG wzgtest)
 set(SOURCE_DIR ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/../../../thirdparty)
+set(LIBRARY_NAME native_lib)
 
 include_directories(${SOURCE_DIR})
 include_directories(${SOURCE_DIR}/base)
@@ -43,6 +44,5 @@ include_directories(${THIRD_PARTY_DIR}/libyuv/include)
 add_library(libyuv_ttt SHARED IMPORTED)
 set_target_properties(libyuv_ttt PROPERTIES IMPORTED_LOCATION ${THIRD_PARTY_DIR}/libs/${ANDROID_ABI}/libyuv_ttt.so)
 
-add_library(native-lib SHARED ${SOURCE_FILE})
-
-target_link_libraries(native-lib libyuv_ttt log android)
+add_library(${LIBRARY_NAME} SHARED ${SOURCE_FILE})
+target_link_libraries(${LIBRARY_NAME} libyuv_ttt log android)
